force-app/main/default/objects/Tax_payer__c/Tax_payer__c.object-meta.xml
<CustomObject>
    <label>Tax payer detail</label>
    <nameField>
        <label>Tax payer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax payer details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>