force-app/main/default/objects/Tax_payer__c/fields/Avg__c.field-meta.xml
<CustomField>
    <fullName>Avg__c</fullName>
    <formula>sum_of_amount__c  /  count_of_custom__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>