force-app/main/default/objects/Tax_payer__c/fields/count_of_custom__c.field-meta.xml
<CustomField>
    <fullName>count_of_custom__c</fullName>
    <label>count of custom</label>
    <summaryForeignKey>Tax_payed__c.Tax_payer_detail__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>