force-app/main/default/objects/Tax_payer__c/fields/Hdisk__c.field-meta.xml
<CustomField>
    <fullName>Hdisk__c</fullName>
    <label>Hdisk</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>