force-app/main/default/objects/Tax_payer__c/fields/load_capacity__c.field-meta.xml
<CustomField>
    <fullName>load_capacity__c</fullName>
    <label>load capacity</label>
    <length>99</length>
    <type>Text</type>
</CustomField>