force-app/main/default/objects/Tax_payer__c/fields/Max_tax_paid__c.field-meta.xml
<CustomField>
    <fullName>Max_tax_paid__c</fullName>
    <label>Max tax paid</label>
    <summarizedField>Tax_payed__c.tax_amount__c</summarizedField>
    <summaryForeignKey>Tax_payed__c.Tax_payer_detail__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>