force-app/main/default/objects/Tax_payer__c/fields/Processer__c.field-meta.xml
<CustomField>
    <fullName>Processer__c</fullName>
    <label>Processor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>