force-app/main/default/objects/Tax_payer__c/fields/sum_of_amount__c.field-meta.xml
<CustomField>
    <fullName>sum_of_amount__c</fullName>
    <label>sum of amount</label>
    <summarizedField>Tax_payed__c.tax_amount__c</summarizedField>
    <summaryForeignKey>Tax_payed__c.Tax_payer_detail__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>